--- a/src/style.css
+++ b/src/style.css
@@ -89,9 +89,24 @@ main {
   margin-top: 0;
 }
 
-#gameStartBtn:hover{
+#gameStartBtn:hover,
+#retryBtn:hover{
   background-color: var(--dkClr);
   border: 0.5px solid var(--liClr);
   color: var(--liClr);
   cursor:pointer;
+}
+
+#retryBtn{
+  display: inline-block;
+  width: 100px;
+  padding:8px 15px;
+  margin: 20px 0;
+  text-align: center;
+  font-family: inherit;
+  border-radius: 10px;;
+}
+
+#retryBtn p{
+  margin-top: 0;
 }
